# TFM

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docker/: Dockerfile  Dockerfile.filebeat  docker-compose.yml  entrypoint.sh  filebeat.yml
docker/config/: apache-dvwa.conf  dvwa.config.inc.php
docker/kibana/: dashboards.ndjson
scripts/setup-elk/: Makefile
scripts/setup-kibana/: Makefile
scripts/setup-nmap/: Makefile
scripts/setup-zap/: Makefile
src/: main.py
src/detection/: __init__.py  anomalies.py  correlation.py  elk_monitor.py  signatures.py
src/scanners/: network_scanner.py  web_scanner.py
src/utils/: __init__.py  ui_utils.py
tests/: test_detection.py  test_scanner.py
